--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ body {
   font-family: 'Open Sans', sans-serif;
   scroll-behavior: smooth;
   line-height: 1.6;  
+  overflow-x: hidden;
+  overscroll-behavior: none; /* Allows for verticle scrolling while having no overflow*/
 }
 
 a {
@@ -32,6 +34,7 @@ img {
   max-width: 100%;
 }
 
+/* Utility */
 
 .container {
   max-width: 1200px;
@@ -45,10 +48,27 @@ img {
   padding: 0 2rem;
 }
 
+.btn {
+  display: inline-block;
+  padding: 1.3rem 2.3rem;
+  border: 1px solid var(--secondary-color);
+  border-radius: 32px;
+  background: var(--secondary-color);
+  color: var(--dark-color);
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background: var(--primary-color);
+  color: #fff;
+  border-color: #fff;
+}
+
 /* Navbar */
 
 .navbar {
-  background: black; /* temp */
+  background: transparent; 
   color: white;
   padding: 1rem 2rem;
   position: fixed;
@@ -57,6 +77,11 @@ img {
   left: 0;
   z-index: 1000;
   transition: background-color 0.3s ease-in-out;
+}
+
+.navbar.navbar-scroll {
+  background-color: rgba(235, 77, 85, 0.7);
+  backdrop-filter: blur(10px);
 }
 
 .navbar-flex {
@@ -105,18 +130,18 @@ img {
   top: 100%;
   left: 0;
   width: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.97);
   opacity: 0.95;
   padding: 3rem 2rem;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-  transform: translateY(100%);
+  transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
 }
 
 .navbar .mobile-menu-items.active {
-  transform: translateY(0);  
+  transform: translateX(0);  
 }
 
 .navbar .mobile-menu-list {
@@ -126,15 +151,82 @@ img {
   font-size: 1.2rem;
 }
 
+/* Hero */
+
+.hero {
+  background: #000 url('../Images/images/header-background.jpg') center center/cover no-repeat;
+  padding: 11.5rem 2rem 8rem;
+  color: #fff;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.hero .hero-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 6rem;
+  padding-bottom: 8rem;
+}
+
+.hero h1 {
+  font-size: 3.5rem;
+  line-height: 1.2;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.hero p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  line-height: 1.8;
+  font-weight: 400;
+}
+
+.hero img {
+  width: 100%;
+  margin-right: -100px;
+}
+
+.hero .frame-decoration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
 
 /* Media Queries */
 
 @media(max-width: 1200px) {
+  .hero .hero-flex {
+    gap: 2rem;
+  }
 
+  .hero img {
+    max-width: 500px;
+    margin-right: 0;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
+  }
 }
 
 @media(max-width: 992px) {
+  .hero {
+    text-align: center;
+  }
 
+  .hero .hero-flex {
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+
+  .hero img {
+    max-width: 600px;
+    margin-top: 2rem;
+  }
 }
 
 @media(max-width: 768px) {
@@ -153,5 +245,16 @@ img {
 }
 
 @media(max-width: 576px) {
+  .hero{
+    padding-right: 0.2rem;
+    padding-left: 0.2rem;
+  }
 
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+
+  .hero img {
+    max-width: 350px;
+  }
 }
