--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,16 @@ img {
   border-color: #fff;
 }
 
+/* text classes */
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-secondary {
+  color: var(--secondary-color);
+}
+
 .section {
   margin: 4rem 0;
 }
@@ -316,6 +326,107 @@ img {
   border: none;  
 }
 
+/* info section */
+
+.info-container {
+  background: url(../Images/images/audience.jpg) top center/cover no-repeat;
+  display: flex;
+}
+
+.info-content {
+  background-color: var(--primary-color);
+  color: #fff;
+  flex: 1;
+  padding: 4rem;
+}
+
+.info-left {
+  width: 50%;
+}
+
+.info-content h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  font-weight: 700;
+}
+
+.info-content p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.info-content ul li {
+  font-size: 1.2rem;
+  line-height: 2;
+}
+
+.info-content i {
+  margin-right: 0.5rem;
+  color: var(--secondary-color);
+}
+
+/* Takeaways */
+
+.takeaways-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding: 1.5rem 0;
+}
+
+.takeaways-cards .card {
+  flex-direction: row;
+  text-align: left;
+}
+
+.takeaways-cards .card i {
+  margin-right: 1rem;
+}
+
+/* details */ 
+.details .details-flex {
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.details img {
+  width: 100%;
+  max-width: 500px;
+}
+
+.details h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.details .heading-border {
+  margin: 0;
+}
+
+.details p {
+  margin: 1rem 0 2rem;
+}
+
+.details ul {
+  margin-bottom: 2rem;
+}
+
+.details ul li {
+  line-height: 2;
+}
+
+.details i {
+  margin-right: 0.5rem;
+}
+
+/* Author */
+
+.details + .details .details-flex {
+  flex-direction: row-reverse;
+}
 
 /* Media Queries */
 
@@ -360,6 +471,18 @@ img {
   .chapter-cards {
     grid-template-columns: 1fr;
   }
+
+  
+
+  .takeaways-cards { /*Makes icons un-aligned in 1 column, still retains item centering*/
+    grid-template-columns: 1fr;    
+  }
+
+  .details-flex, .details + .details .details-flex {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
 }
 
 @media(max-width: 768px) {
@@ -374,6 +497,26 @@ img {
   .navbar .mobile-menu-toggle {
     display: block;
     padding: 10px;
+  }
+
+  .info-container {
+    flex-direction: column;
+  }
+
+  .info-content {
+    padding: 2rem;    
+  }
+
+  .info-content h2 {
+    font-size: 1.5rem;
+  }
+
+  .info-content p {
+    font-size: 1rem;
+  }
+
+  .info-left {
+    display: none;
   }
 }
 
