--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,112 @@ img {
   width: 200px;
 }
 
+/* Newsletter */
+.newsletter {
+  text-align: center;
+  margin: 0 2rem;
+}
+
+.newsletter-flex {
+  display: flex;
+  gap: 2rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--light-color);
+  border: 1px solid #eee;
+  padding: 4rem 2rem;
+}
+
+.newsletter h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.newsletter p {
+  max-width: 600px;
+}
+
+.newsletter input[type='email'] {
+  padding: 1rem 2rem;
+  border: 1px solid #ccc;
+  border-radius: 32px;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.newsletter form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.newsletter .btn {
+  border-radius: 32px;
+  height: 100%;
+  /* max-height: 52px; */
+}
+
+/* social */
+
+.social{
+  background: var(--dark-color);
+  color: #fff;
+  padding: 6rem 1rem;
+  text-align: center;
+  font-size: 1.7rem;
+  margin-bottom: 0;
+}
+
+.social a {
+  color: #fff;
+}
+
+.social a:hover {
+  color: var(--secondary-color);
+}
+
+.social p {
+  margin-bottom: 2rem;
+}
+
+.social .social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+}
+
+/* Footer */
+
+.footer {
+  background: var(--dark-color);
+  color: #fff;
+  border-top: 1px solid #384653;
+  padding: 0.5rem 2rem;
+}
+
+.footer-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer a {
+  color: #fff;
+}
+
+.footer a:hover {
+  color: var(--secondary-color);
+}
+
+.footer ul {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  margin: 2rem 0;
+}
+
 /* Media Queries */
 
 @media(max-width: 1200px) {
@@ -563,6 +669,20 @@ img {
   .info-content p {
     font-size: 1rem;
   }
+
+  .social .social-icons {
+    flex-wrap: wrap;
+  }
+
+  .footer {
+    padding: 0.5rem 1rem;
+  }
+
+  .footer-flex {
+    flex-direction: column;
+    text-align: center;
+  }
+  
 }
 
 @media(max-width: 576px) {
@@ -585,5 +705,9 @@ img {
 
   .summary .container {
     padding: 0;
+  }
+
+  .stats .stats-numbers {
+    flex-direction: column;
   }
 }
